[package]
name = "actix-web-isucon-measured"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "A middleware to measure request processing time for ISUCON."
homepage = "https://github.com/sengine-xyz/actix-web-isucon-measured"
documentation = "https://github.com/sengine-xyz/actix-web-isucon-measured"
repository = "https://github.com/sengine-xyz/actix-web-isucon-measured"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }


[dev-dependencies]
log = "0.4"
env_logger = "0.9"
rand = "0.8"
